Revision history for Perl extension KRISP.

$Id: Changes,v 1.7 2010-09-11 09:08:41 oops Exp $

2.1.0
	* Sat Sep 11 2010 JoungKyun.Kim <http://oops.org>
	- linked libkrisp version at least 3.1.0
	- add set_debug method


2.0.1
	* Mon Aug  9 2010 JoungKyun.Kim <http://oops.org>
	- changed license from GPLv2 to LGPL which current and all
	  old versions.
	- linked libkrisp version at least 3.0.2

	* Tue Aug  3 2010 JoungKyun.Kim <http://oops.org>
	- changed path of libkrisp header files


2.0.0
	* Sun Jul  4 2010 JoungKyun.Kim <http://oops.org>
	- don't use swig wrapper any more
	- perl native c module

	* Tue Jun 29 2010 JoungKyun.Kim <http://oops.org>
	- rewrite all code
	  h2xs -A -n KRISP (with 1.23)

	* Mon Jun 21 2010 JoungKyun.Kim <http://oops.org>
    - required over libkrisp 3.0.0


1.2.0
	* Fri Dec  1 2006 JoungKyun.Kim <http://oops.org>
    - release 1.2.0

	* Wed Nov 29 2006 JoungKyun.Kim <http://oops.org>
    - support over libkrisp 2.1.0
    - support userdb support


1.1.1
	* Thu Sep 15 2006 JoungKyun.Kim <http://oops.org>
	- add geoip city flag in new declear
	- 1.1.1 release


1.1.0
	* Thu Sep  9 2006 JoungKyun.Kim <http://oops.org>
	- required over libkrisp 2.0.0
	- support several geoip extensions
	- release 1.1.0


1.0.0
	* Mon Jun 26 2006 JoungKyun.Kim <http://oops.org>
	- 1.0.0 release